--- a/table.html
+++ b/table.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="practice.html">Practice</a></li>
                 <li><a href="media.html">Media</a></li>
                 <li><a href="table.html">Table</a></li>
